# blackline

./: .gitignore  CHANGES.md  LICENSE  Makefile  README.md  UX_LOOP_INSTRUCTIONS.md  pyproject.toml
.blackline-web/runs/20260413-014346-b62d6b07/: metadata.json
.blackline-web/runs/20260413-014346-b62d6b07/outputs/: blackline_report.docx
.blackline-web/runs/20260413-020347-b07e9af9/: metadata.json
.blackline-web/runs/20260413-020347-b07e9af9/outputs/: blackline_report.docx
.blackline-web/runs/20260413-020859-ca0eadc5/: metadata.json
.blackline-web/runs/20260413-020859-ca0eadc5/inputs/: Appendix X - Proposed Service Commitment Framework - short form.docx
.blackline-web/runs/20260413-144309-ac4c35b1/: metadata.json
.blackline-web/runs/20260413-151846-60c260be/: metadata.json
.blackline-web/runs/20260413-163413-fdc1b182/: metadata.json
.blackline-web/runs/20260413-164637-be2fb7b3/: metadata.json
.blackline-web/runs/20260413-164901-446932c9/: metadata.json
.blackline-web/runs/20260413-165225-56ae0ec3/: metadata.json
.blackline-web/runs/20260413-175706-b8ebe5b8/: metadata.json
.blackline-web/runs/20260413-180647-128be0d6/: metadata.json
.blackline-web/runs/20260413-181051-3e11fd45/: metadata.json
.blackline-web/runs/20260413-181954-952e49e0/: metadata.json
.blackline-web/runs/20260413-182804-ee210c10/: metadata.json
.blackline-web/runs/20260413-183227-70453bac/: final_clean_export.docx  metadata.json
.github/workflows/: ci.yml
src/blackline_tool/: __init__.py  cli.py  core.py  runner.py  strict.py  web.py
src/blackline_tool/core/: __init__.py  diff.py  docx_engine.py  engine.py  models.py  renderers.py  utils.py
tests/: test_cli.py  test_core.py  test_review_metadata.py  test_web.py
(+29 files in other folders)
