[project]
name = "blackline-tool"
version = "0.3.0"
description = "Simple local document blacklining tool for legal workflows"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "python-docx>=1.1.2",
  "reportlab>=4.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]

[project.scripts]
blackline = "blackline_tool.cli:main"
blackline-web = "blackline_tool.web:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]
